fixed overflow-x

--- a/src/css/PostsDashboard.css
+++ b/src/css/PostsDashboard.css
@@ -1,7 +1,6 @@
 .posts-dashboard-container {
   padding-top: var(--header-height);
   height: 100vh;
-  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
